--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "item-builder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ZungrySoft.github.io/ItemBuilderGUIv2", 
+  "homepage": "http://ZungrySoft.github.io/ItemBuilderStudio", 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
